--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <script src="https://unpkg.com/@babel/standalone@7.2.5/babel.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.0.0/umd/react.development.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.0.0/umd/react-dom.development.js"></script>
+        <script src="flashcardData.js"></script>
+
+
         <link rel="stylesheet" type="text/css" href="index.css"></link>
     </head>
     <body>
@@ -12,43 +15,41 @@
 
 
       <script type='text/babel'>
-        var cardData = { 
-          front: {
-            question: 'You may know that React was created at _________.',
-            hint: 'This company\'s site is known for being written in PHP.'
+        const cardData = importedFlashCardDataFile;
+
+        class App extends React.Component {
+          render() {
+            return (
+              <div className='App'>
+                <h1 className='title'>
+                 Flashback
+                </h1>
+                <p className='sub-title'>
+                  An interactive flashcard app.
+                </p>
+                <div className="card-list">
+                  {cardData.map((card) => <Card front={card.front} />)}
+                </div>
+              </div>
+            );
           }
         };
 
-        var App = function() {
-          return (
-            <div className='App'>
-              <h1 className='title'>
-               Flashback
-              </h1>
-              <p className='sub-title'>
-                An interactive flashcard app.
-              </p>
-              <div className="card-list">
-                {Card(cardData)}
+      class Card extends React.Component {
+          render() {
+            return (
+              <div className='Card -front'>
+                <div className="front">
+                  <h3 className='question'>
+                    {this.props.front.question}
+                  </h3>
+                  <p className='hint'>
+                    <span>Hint:</span> {this.props.front.hint} 
+                  </p>                      
+                </div>
               </div>
-            </div>
-          );
-        };
-
-        var Card = function(props) {
-          return (
-            <div className='Card -front'>
-              <div className="front">
-                <h3 className='question'>
-                  You may know that React was created at _________.
-                </h3>
-                <p className='hint'>
-                  <span>Hint:</span> 
-                  {props.front.hint}
-                </p>                      
-              </div>
-            </div>
-          );
+            );
+          }
         };
 
         ReactDOM.render(App(), document.getElementById('app'));
