--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://unpkg.com/@babel/standalone@7.2.5/babel.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.0.0/umd/react.development.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.0.0/umd/react-dom.development.js"></script>
-        <script src="flashcardData.js"></script>
+        <script src="flashCardData.js"></script>
 
 
         <link rel="stylesheet" type="text/css" href="index.css"></link>
@@ -15,44 +15,44 @@
 
 
       <script type='text/babel'>
-        const cardData = importedFlashCardDataFile;
+    const cardData = importedFlashCardDataFile;
 
         class App extends React.Component {
           render() {
             return (
               <div className='App'>
                 <h1 className='title'>
-                 Flashback
+                  Flashback
                 </h1>
                 <p className='sub-title'>
                   An interactive flashcard app.
                 </p>
-                <div className="card-list">
-                  {cardData.map((card) => <Card front={card.front} />)}
+                <div className='card-list'>
+                  {cardData.map((card, index) => <Card key={index} front={card.front}  />)}
                 </div>
               </div>
             );
           }
-        };
+        }
 
-      class Card extends React.Component {
+        class Card extends React.Component {
           render() {
             return (
               <div className='Card -front'>
-                <div className="front">
+                <div className='front'>
                   <h3 className='question'>
                     {this.props.front.question}
                   </h3>
                   <p className='hint'>
-                    <span>Hint:</span> {this.props.front.hint} 
-                  </p>                      
+                    <span>Hint:</span> {this.props.front.hint}
+                  </p>
                 </div>
               </div>
             );
           }
-        };
+        }
 
-        ReactDOM.render(App(), document.getElementById('app'));
+        ReactDOM.render(<App />, document.getElementById('app'));
       </script>
     </body>
   </html>
