--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.0.0/umd/react.development.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.0.0/umd/react-dom.development.js"></script>
         <script src="flashCardData.js"></script>
+        <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 
 
         <link rel="stylesheet" type="text/css" href="index.css"></link>
