--- a/index.html
+++ b/index.html
@@ -16,10 +16,32 @@
       <div id="app"></div>
 
 
-      <script type='text/babel'>
+    <script type='text/babel'>
     const cardData = importedFlashCardDataFile;
 
+
         class App extends React.Component {
+          constructor() {
+            super();
+            this.state = {
+             cardData: []
+            };
+          }
+
+          componentDidMount() {
+            this.setState({ cardData: cardData });
+
+          }
+
+          shuffleBackward = () => {
+            console.log('Shuffle Backward!');
+          }
+
+          shuffleForward = () => {
+            console.log('Shuffle Forward!');    
+          }
+
+
           render() {
             return (
               <div className='App'>
@@ -30,7 +52,15 @@
                   An interactive flashcard app.
                 </p>
                 <div className='card-list'>
-                  {cardData.map((card, index) => <Card key={index} front={card.front}  />)}
+                  {this.state.cardData.map((card, index) => <Card key={index} front={card.front} />)}
+                </div>
+                <div className='buttons'>
+                  <button onclick={() =>  this.shuffleBackward()}>
+                    &lt;
+                  </button>
+                  <button onclick={() =>  this.shuffleForward()}>
+                    &gt;
+                  </button>
                 </div>
               </div>
             );
