--- a/index.html
+++ b/index.html
@@ -17,60 +17,77 @@
 
 
     <script type='text/babel'>
-    const cardData = importedFlashCardDataFile;
+      const cardData = importedFlashCardDataFile;
 
+      class App extends React.Component {
+        constructor() {
+          super();
+          this.state = {
+            cardData: []
+          };
+        }
 
-        class App extends React.Component {
-          constructor() {
-            super();
-            this.state = {
-             cardData: []
-            };
-          }
+        componentDidMount() {
+          this.setState({ cardData: cardData });
+        }
 
-          componentDidMount() {
-            this.setState({ cardData: cardData });
+        shuffleBackward = () => {
+          const { cardData } = this.state;
+          const newCardData = [cardData[6], ...cardData.slice(0, 6)];
+          this.setState({ cardData: newCardData });
+        }
 
-          }
-
-          shuffleBackward = () => {
-            console.log('Shuffle Backward!');
-          }
-
-          shuffleForward = () => {
-            console.log('Shuffle Forward!');    
-          }
-
-
-          render() {
-            return (
-              <div className='App'>
-                <h1 className='title'>
-                  Flashback
-                </h1>
-                <p className='sub-title'>
-                  An interactive flashcard app.
-                </p>
-                <div className='card-list'>
-                  {this.state.cardData.map((card, index) => <Card key={index} front={card.front} />)}
-                </div>
-                <div className='buttons'>
-                  <button onClick={() => this.shuffleBackward()}>
-                    &lt;
-                  </button>
-                  <button onClick={() => this.shuffleForward()}>
-                    &gt;
-                  </button>
-                </div>
+        shuffleForward = () => {
+          const { cardData } = this.state;
+          const newCardData = [...cardData.slice(1), cardData[0]];
+          this.setState({ cardData: newCardData });
+        }
+          
+        render() {
+          return (
+            <div className='App'>
+              <h1 className='title'>
+                Flashback
+              </h1>
+              <p className='sub-title'>
+                An interactive flash cards app.
+              </p>
+              <div className='card-list'>
+                {this.state.cardData.map((card, index) => <Card key={index} index={index} front={card.front} back={card.back} />)}
               </div>
-            );
+              <div className='buttons'>
+                <button onClick={() => this.shuffleBackward()}>
+                  &lt;
+                </button>
+                <button onClick={() => this.shuffleForward()}>
+                  &gt;
+                </button>
+              </div>
+            </div>
+          );
+        }
+      }
+
+      class Card extends React.Component {
+        constructor() {
+          super();
+          this.state = {
+            flipped: false
+          };
+        }
+
+        flipCard = () => {
+          if (this.props.index === 0) {
+            this.setState({ flipped: !this.state.flipped });
           }
         }
 
-        class Card extends React.Component {
-          render() {
-            return (
-              <div className='Card -front'>
+        cardClass = () => this.state.flipped ? 'Card -back' : 'Card -front';
+
+        render() {
+          return (
+            <div className={this.cardClass()} onClick={() => this.flipCard()}>
+              {!this.state.flipped ?
                 <div className='front'>
                   <h3 className='question'>
                     {this.props.front.question}
@@ -79,12 +96,25 @@
                     <span>Hint:</span> {this.props.front.hint}
                   </p>
                 </div>
-              </div>
-            );
-          }
+                :
+                <div className='back'>
+                  <div className='image'>
+                    <img src={this.props.back.image} />
+                  </div>
+                  <h3 className='answer'>
+                    {this.props.back.answer}
+                  </h3>
+                  <p className='description'>
+                    {this.props.back.description}
+                  </p>
+                </div>
+              }
+            </div>
+          );
         }
+      }
 
-        ReactDOM.render(<App />, document.getElementById('app'));
+      ReactDOM.render(<App />, document.getElementById('app'));
       </script>
     </body>
   </html>
